exam2/EgressGateway.yaml

 #useful for centralized security / monitoring
 #when all the nodes does not have public IPs

--- # install egress gateway controller

#apiVersion: install.istio.io/v1alpha1
#kind: IstioOperator
#metadata:
#  namespace: istio-system
#  name: example-istiocontrolplane
#spec:
#  profile: demo
#
#---


#first create a serviec entry to allow traffic to the external host

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cnn
spec:
  hosts:
  - edition.cnn.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway #match with egress gateway serviec label
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - edition.cnn.com  #register this host as allowed at the egress gateway

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: cnn


--- #create Service Entry for endpoint
#this is to direct traffic from side car to egress gateway
# and from egress gateway to external serviec

apiVersion: networking.istio.io/v1alpha3  
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match: # sidecars to egress gateway
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: cnn
        port:
          number: 80
      weight: 100
  - match: # egress gateway to external service
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 80
      weight: 100
